<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Monitor+</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="default_host_name">192.168.1.3</string>
    <string name="connect">Connect</string>
    <string name="hint_host_name">Host Address</string>
    <string name="default_port_number">13579</string>
    <string name="hint_port_number">Port</string>
    <string name="hint_enter_command">Enter Command</string>
    <string name="button_run_command">Run</string>
    <string name="hint_enter_program">App Name</string>
    <string name="button_launch_program">Launch</string>
    <string name="close_server">Close Server</string>
    <string name="take_screenshot">Take Screenshot</string>
    <string name="launch_screenshot_activity">Screenshot</string>
    <string name="launch_powerpoint_activity">Powerpoint Controls</string>
    <string name="title_activity_powerpoint">Powerpoint Controls</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start_ppt">F5 (Run)</string>
    <string name="close_ppt">Esc (Close)</string>
    <string name="title_activity_screenshot">ScreenshotActivity</string>
    <string name="title_activity_player">MPC Media Controls</string>
    <string name="launch_media_activity">MPC Media Controls</string>
    <string name="play_pause">Play / Pause</string>
    <string name="stop">Stop</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="rewind">Rewind</string>
    <string name="full_screen">Full Screen</string>
    <string name="title_activity_launch_run">Launch Program</string>
    <string name="title_activity_cmd">CMDActivity</string>
    <string name="temp_cmd_prompt">C:\\Users\\student</string>
    <string name="launch_guide">Enter the name of the program. If it\'s not a known program, type the full path to the executable of the application.</string>
    <string name="cmd_guide">Enter any cmd commands.\nWarning: Be careful. Only use commands if you know what they do.</string>
    <string name="title_activity_webcam">Webcam Snapshot</string>
    <string name="take_webcam_snap">Take Snap</string>
    <string name="close_webcam">Close Webcam</string>

</resources>
