<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:weightSum="1.0"
    android:padding="0dp"
    tools:context=".PowerpointActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:weightSum="1.0">

    <Button
        android:id="@+id/btnPPTF5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/start_ppt" />

    <Button
        android:id="@+id/btnPPTEsc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/close_ppt" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPPTPrev"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/previous" />

    <Button
        android:id="@+id/btnPPTNext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/next" />

</LinearLayout>
