<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/light_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CMDActivity" >
    
    <TextView
        android:id="@+id/tvLaunchGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_guide" />

    <EditText
        android:id="@+id/etProgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_program" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_launch_program" />

</LinearLayout>
